@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 20-04-2006 fixed: if an invalid audio/sub stream was selected from dvdmenu, wrong stream would be indicated from osd. 
+                     too many audio/sub streams would be shown in osd
  - 20-04-2006 fixed: audio/video sync would be of if syncing of fields was enabled. extremly so on 30fps movies if pal60 wasn't allowed.
  - 20-04-2006 changed: Altered the way skin labels containing $INFO and $LOCALIZE are parsed, so that they render faster, and you can better indicate which parts of the string should not render if a particular piece of $INFO is empty. More information is available in the online manual.
  - 20-04-2006 fixed: Queuing of music folders that contained playlist files referencing the files in the same folder meant they were added more than once.
